force-app/main/default/objects/redwing__Training_Track__c/redwing__Training_Track__c.object-meta.xml
<CustomObject>
    <label>Learning Trac</label>
    <nameField>
        <label>Learning Trac Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Tracs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>