force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Achievement will determine the badge displayed in the Learning Trac box and header</inlineHelpText>
    <label>Achievement</label>
    <referenceTo>redwing__Achievement__c</referenceTo>
    <relationshipLabel>Learning Tracs</relationshipLabel>
    <relationshipName>Training_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>