force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Assign_Only_Self_Registration_Plans__c.field-meta.xml
<CustomField>
    <fullName>redwing__Assign_Only_Self_Registration_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only assign self-registration enabled Learning Plans when assigning/registering for a Learning Trac</inlineHelpText>
    <label>Assign Only Self-Reg Plans (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>