force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Default_Language_Learning_Trac__c.field-meta.xml
<CustomField>
    <fullName>redwing__Default_Language_Learning_Trac__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Language Learning Trac</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>redwing__Training_Track__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>redwing__Training_Track__c.redwing__Default_Language_Learning_Trac__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Learning Tracs</relationshipLabel>
    <relationshipName>Training_Tracs</relationshipName>
    <type>Lookup</type>
</CustomField>