force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>