force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Enable_all_internal_users__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_all_internal_users__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling this checkbox will expose this Learning Trac to all internal users</inlineHelpText>
    <label>Enable for all internal users (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>