force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Featured__c.field-meta.xml
<CustomField>
    <fullName>redwing__Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the learning will be highlighted as featured on the Learning List Lite.</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>