force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Learning_Category__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Catalog used for grouping Learning Tracs into sections</inlineHelpText>
    <label>Group</label>
    <referenceTo>redwing__Learning_Category__c</referenceTo>
    <relationshipLabel>Learning Tracs</relationshipLabel>
    <relationshipName>Training_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>