force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Status__c</fullName>
    <inlineHelpText>Learning Tracs are not available to end users until they are &quot;Active&quot;</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>