force-app/main/default/objects/redwing__Training_Track__c/fields/redwing__Text_Color__c.field-meta.xml
<CustomField>
    <fullName>redwing__Text_Color__c</fullName>
    <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
    <label>Text Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>